# local_tts_v2

./: .gitignore  CHANGELOG.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: docs.yml
docs/: getting-started.md  index.md
docs/api/: adapters.md  domain.md  index.md  ports.md  service.md
docs/architecture/: adapters.md  domain.md  index.md  overview.md  ports.md
docs/architecture/decisions/: 001-hexagonal-architecture.md  002-coqui-adapter-strategy.md  003-bfsi-text-normalisation.md  index.md
docs/guides/: adding-a-persona.md  adding-a-tts-adapter.md  testing.md
docs/kt/: onboarding.md  ownership-transfer.md
docs/operations/: runbook.md  troubleshooting.md
notebooks/: quick_test_v2.ipynb
src/tts_v2/: __init__.py
src/tts_v2/adapters/audio_sink/: file_sink_adapter.py
src/tts_v2/adapters/audit/: file_audit_adapter.py  noop_audit_adapter.py
src/tts_v2/adapters/normalizer/: bfsi_normalizer_adapter.py
src/tts_v2/adapters/synthesizer/: coqui_adapter.py  mock_adapter.py
src/tts_v2/adapters/vocoder/: passthrough_adapter.py
src/tts_v2/domain/: __init__.py  audio.py  voice.py
src/tts_v2/ports/: __init__.py  audio_sink_port.py  audit_port.py  normalizer_port.py  synthesizer_port.py  vocoder_port.py
src/tts_v2/service/: __init__.py  tts_service.py
src/tts_v2/shared/: __init__.py  audio_utils.py  device_utils.py
src/tts_v2/text_normalization/: __init__.py  abbreviation_handler.py  domain_phrases.py  number_formatter.py  synthetic_hooks.py
tests/: conftest.py  test_tts_service.py
